(library
 (name        adt4hpc)
 (modules :standard \ main)
 (libraries   containers containers.unix peahell ocamlgraph)
 (flags -open Peahell)
)

(executable
 (name main)
 (public_name adt4hpc)
 (modules main)
 (libraries adt4hpc peahell.native)
)

(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags --explain)
)
