(library
 (name        adtr)
 (modules :standard \ main)
 (libraries   containers containers.unix peahell ocamlgraph z3overlay)
 (flags -open Peahell)
)

(executable
 (name main)
 (public_name adtr)
 (modules main)
 (libraries adtr peahell.native)
)

(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags --explain)
)
